--- a/styles.css
+++ b/styles.css
@@ -16,9 +16,11 @@
     text-align: left;
     padding-left: 2px;
     position: relative;
-    height: 472.87px;
+    /* height: 472.87px; */
+    /* height: 450px; */
+    height: 485px;
     width: 318.35px;
-    overflow: auto;
+    overflow: default;
     display: block;
 }
 
@@ -34,18 +36,21 @@
     /* max-width: 250px;
     overflow: hidden; */
     /* border: 3px solid rgb(95, 153, 192); */
-    font-size: 1.7rem;
+    font-size: 2rem;
     font-weight: bold;
     padding-right: 9px;
+    vertical-align: top; 
 }
 
-#prev-screen {
-    /* height: 30px; */
+.prev-screen {
     font-size: 1rem;
-    padding-right: 6px;
+    padding-right: 14px;
+    margin-bottom: 0;
+    color: #a6a6a6;
+    vertical-align: bottom;
 }
 
-#screen, #prev-screen {
+.screen, .prev-screen {
     background-color: #202020;
     text-align: right;
 }
@@ -116,17 +121,11 @@ td[data-id='=']:hover {
     background-color: #94b6be;
 }
 
-tr .prev-screen {
-    /* position: relative; */
-}
-
 .prev-screen, .screen {
-    /* position: absolute; */
     text-align: right;
     width: 300px;
     background-color: #202020;
 }
-
 
 .prev-screen {
     color: #a6a6a6;
@@ -147,12 +146,14 @@ tr .prev-screen {
     background-color: #202020;
 }
 
-tbody {
-    /* max-height: 300px; */
-    /* overflow: auto;
-    display: block; */
-} 
+thead {
+    transition: all .3s ease-in-out;
+}
 
+.thead-history {
+    background-color: #131212;
+    color: #8f8f8f;
+}
 
 /* Scrollbar */
 
@@ -183,3 +184,25 @@ tbody {
     text-align: right;
 }
 
+.tbody-container {
+    position: relative;
+    width: 50%;
+}
+
+.overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #202020;
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: .5s ease;
+    overflow: auto;
+}
+
+.overlay-active {
+    height: 330px;
+    overflow: auto;
+}
